# rfidplayer_pico

./: .gitignore  .localvimrc  .vimrc  CMakeLists.txt  LICENSE  README.md  cards.h  cast_control.c  cast_control.h  cast_controllers.c  cast_controllers.h  cast_message.c  cast_message.h  casts.c  casts.h  common.h  lwipopts.h  main.c  mbedtls_config.h  mcheck.c  mcheck.h  mdns_helper.c  mdns_helper.h  messages.h  player.c  player.h  quadrature_encoder.pio  rfid_card.c  rfid_card.h  setup_wifi.h  tcp_common.c  tcp_common.h  tls_client.c  tls_client.h
proto/: cast_channel.pb-c.c  cast_channel.pb-c.h  cast_channel.pb.cc  cast_channel.pb.h  generate-proto.sh  protoc-gen-c
